--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ Buy agriculture tools for best price in Nepal" name="description">
                     <div class="carousel-container">
                         <div class="carousel-content animate__animated animate__fadeInUp">
                             <h2>Welcome to <span>Nepal Traders &amp; Suppliers</span></h2>
-                            <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-                            <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
+                            <p>Npeal traders and suppliers is a wholesale suppliers of tractor's spare parts and other tools needed for agricultural purpose. We provide home delivery facility at reasonable price.</p>
+                            <div class="text-center"><a href="products.html" class="btn-get-started">Read More</a></div>
                         </div>
                     </div>
                 </div>
