--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Buy agriculture tools for best price in Nepal" name="description">
                     <div class="carousel-container">
                         <div class="carousel-content animate__animated animate__fadeInUp">
                             <h2>Welcome to <span>Nepal Traders &amp; Suppliers</span></h2>
-                            <p>Npeal traders and suppliers is a wholesale suppliers of tractor's spare parts and other tools needed for agricultural purpose. We provide home delivery facility at reasonable price.</p>
+                            <p>Nepal traders and suppliers is a wholesale suppliers of tractor's spare parts and other tools needed for agricultural purpose. We provide home delivery facility at reasonable price.</p>
                             <div class="text-center"><a href="products.html" class="btn-get-started">Read More</a></div>
                         </div>
                     </div>
